# near-cpp-jsonrpc-client

./: .gitignore  .gitmodules  CMakeLists.txt  NearPlugin.sln  README.md  buldGRP.txt  buldGRP.txt.bak  generateProjectForMac.sh  linux.bat  linux.sh  updateForWin.bat  updateProtoHeadersCPP.bat
NearPlugin/: Client.cpp  Client.h  Connector.cpp  Connector.h  EdKeys.cpp  EdKeys.h  GRPC_Client.cpp  GRPC_Client.h  Helper.cpp  Helper.h  ModelItem.cpp  NearPlugin.vcxproj  NearPlugin.vcxproj.bak  NearPlugin.vcxproj.filters  Source.cpp  gRPCResponse.cpp
NearPlugin/include/: Client.h  ModelItem.h  gRPCResponse.h
NearPlugin/protocol/: auth.grpc.pb.cc  auth.pb.cc  auth.pb.h  internalAuth.pb.h
